syntax="proto3";
package com.blackyaga.security.grpc.interfaces;

import "google/protobuf/empty.proto";

option java_multiple_files=true;
option java_package="com.blackyaga.security.grpc.interfaces";
option java_outer_classname="SchemaProto";

message MessageResponse{
  string message=1;
}
message Credentials{
  string username=1;
  string password=2;
}
message TokenResponse{
  string token=1;
}
service AuthTestService{
  rpc adminLogin(Credentials)returns(TokenResponse){}
  rpc userLogin(Credentials)returns(TokenResponse){}
  rpc publicReq(google.protobuf.Empty)returns(MessageResponse){}
  rpc adminReq(google.protobuf.Empty)returns(MessageResponse){}
  rpc userReq(google.protobuf.Empty)returns(MessageResponse){}
}
